--- a/Example/Storyboards/Base.lproj/Main.storyboard
+++ b/Example/Storyboards/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="co5-HE-Hqz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="co5-HE-Hqz">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,7 +14,7 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="bdP-RJ-Ynt">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="8uU-l4-tgf" style="IBUITableViewCellStyleDefault" id="KRT-ps-Qoe">
                                 <rect key="frame" x="16" y="55.5" width="343" height="44"/>
@@ -24,7 +24,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8uU-l4-tgf">
-                                            <rect key="frame" x="15" y="0.0" width="313" height="44"/>
+                                            <rect key="frame" x="16" y="0.0" width="311" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -66,23 +66,11 @@
                                 <action selector="leftBarButtonTouched:" destination="kOP-Zo-YRJ" id="ah6-Dv-dBI"/>
                             </connections>
                         </barButtonItem>
-                        <rightBarButtonItems>
-                            <barButtonItem enabled="NO" title="+Doc" id="NH2-Xh-UeT">
-                                <connections>
-                                    <segue destination="SMu-eb-ghq" kind="show" identifier="recordListToFilePicker" id="AAT-8U-vry"/>
-                                </connections>
-                            </barButtonItem>
-                            <barButtonItem title="+Data" id="EQa-xL-eij">
-                                <connections>
-                                    <action selector="addAppData:" destination="kOP-Zo-YRJ" id="jUi-8y-pEm"/>
-                                </connections>
-                            </barButtonItem>
-                            <barButtonItem enabled="NO" image="icon_filter" id="gjb-vM-Njn">
-                                <connections>
-                                    <segue destination="ZI2-rx-2La" kind="show" id="fam-2z-G5m"/>
-                                </connections>
-                            </barButtonItem>
-                        </rightBarButtonItems>
+                        <barButtonItem key="rightBarButtonItem" enabled="NO" image="icon_filter" id="gjb-vM-Njn">
+                            <connections>
+                                <segue destination="ZI2-rx-2La" kind="show" id="fam-2z-G5m"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="MbW-32-lCZ">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
@@ -92,20 +80,20 @@
                         </connections>
                     </refreshControl>
                     <connections>
-                        <outlet property="addButton" destination="NH2-Xh-UeT" id="Tci-Sq-LkA"/>
                         <outlet property="headerView" destination="FTf-4d-alb" id="bZr-kT-Rgb"/>
                         <outlet property="leftBarButton" destination="NIP-x4-nkZ" id="pXB-Ol-aGt"/>
                         <outlet property="searchButton" destination="gjb-vM-Njn" id="D1A-yJ-Wx2"/>
                         <segue destination="tC6-iA-U0Y" kind="show" identifier="openDetail" id="qqp-iq-aBh"/>
+                        <segue destination="SMu-eb-ghq" kind="show" identifier="recordListToFilePicker" id="UVj-Zs-4CA"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CAT-Ee-YWo" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You can upload images to GesundheitsCloud after signing in." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="FTf-4d-alb">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="59"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                    <color key="backgroundColor" systemColor="groupTableViewBackgroundColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                    <color key="textColor" systemColor="scrollViewTexturedBackgroundColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </objects>
@@ -224,7 +212,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <progressView key="backgroundView" opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" id="mKA-BO-vWX">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="2"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="4"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </progressView>
                                 <cells>
@@ -428,5 +416,14 @@
     </scenes>
     <resources>
         <image name="icon_filter" width="28" height="28"/>
+        <systemColor name="groupTableViewBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="scrollViewTexturedBackgroundColor">
+            <color red="0.43529411764705878" green="0.44313725490196082" blue="0.47450980392156861" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
